# colourshift

./: .gitignore  README.md  colourshift.py  pyproject.toml  requirements.txt
colourshift/: __init__.py  cli.py
colourshift/core/: _colour_warnings.py  algorithms.py  colour_models.py  config.py
colourshift/io/: __init__.py  exports.py
colourshift/ui/: tk_app.py  widgets.py
docs/: index.html
paper/: Makefile  ignore-spacing.lua  main.tex  references.bib  style.css  template.html
paper/examples/: maximal-surround-shift.json  sensitive-base-follow-on.json  sensitive-bases.json  strongest-surrounds.json
tests/: test_algorithms.py  test_cli.py  test_colour_models.py  test_exports.py  test_package_metadata.py
