[project]
name = "colourshift"
version = "0.1.0"
description = "Colour appearance exploration (CAM02/CAM02-UCS) with Tk UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colour-science>=0.4",
    "numpy>=1.24",
    "Pillow>=10",
]

[project.scripts]
colourshift = "colourshift.ui.tk_app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["colourshift*"]
exclude = ["paper*"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
